--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1681,7 +1681,15 @@ input#phone,input#display_name {
 
 #participants-list .invisible-head{color:#ffffff; background-color:#000000; font-weight:bold; line-height:29px;}
 
-
+#participants-list .invisible_icon {display:inline-block !important;;
+    width:20px !important; 
+    height:18px !important; 
+    background:url("../image/invisible_icon.png") no-repeat;
+    background-size: cover;
+    padding: 0 !important;
+    border:1px solid transparent;
+    margin: 0 5px 5px 0;
+    }
 
 .arrow_box11 {
 	position: relative;
